Fix warnings